release 0.9.3.java8